--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -38,7 +38,8 @@
     "a = True\n",
     "if a:\n",
     "    print('It is true!')\n",
-    "    p"
+    "    print('Also print this')\n",
+    "else:"
    ]
   },
   {
