--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -39,7 +39,8 @@
     "if a:\n",
     "    print('It is true!')\n",
     "    print('Also print this')\n",
-    "else:"
+    "else:\n",
+    "    print('It is false!')"
    ]
   },
   {
