--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -40,7 +40,8 @@
     "    print('It is true!')\n",
     "    print('Also print this')\n",
     "else:\n",
-    "    print('It is false!')"
+    "    print('It is false!')\n",
+    "print('Always print this')"
    ]
   },
   {
