--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -40,7 +40,7 @@
     "    print('It is true!')\n",
     "    print('Also print this')\n",
     "else:\n",
-    "    print('I"
+    "    print('"
    ]
   },
   {
