--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -157,7 +157,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a = 0\n",
+    "while a < 5:\n",
+    "    print(a)\n",
+    "    a = a + 1"
+   ]
   },
   {
    "cell_type": "code",
