--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -160,7 +160,8 @@
    "source": [
     "a = 0\n",
     "while a < 5:\n",
-    "    print(a)\n"
+    "    print(a)\n",
+    "    a = a + 1"
    ]
   },
   {
