--- a/02_02_Data_Structures.ipynb
+++ b/02_02_Data_Structures.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_list = [[1,2,3],[False, "
+    "my_list = [[1,2,3],[False, True], []]"
    ]
   },
   {
