--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -41,7 +41,7 @@
     "    print('Also print this')\n",
     "else:\n",
     "    print('It is false!')\n",
-    "print('Alway"
+    "print('Alwa"
    ]
   },
   {
