--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -60,7 +60,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "    print('It is false!')\n",
+    "print('Always print this')"
+   ]
   },
   {
    "attachments": {},
