--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -61,6 +61,10 @@
     }
    ],
    "source": [
+    "if a:\n",
+    "    print('It is true!')\n",
+    "    print('Also print this')\n",
+    "    if b:\n",
     "        print('Both are true')\n",
     "        if c:\n",
     "            print('All three are true')\n",
