--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -61,6 +61,9 @@
     }
    ],
    "source": [
+    "a = True\n",
+    "b = False\n",
+    "c = True\n",
     "if a:\n",
     "    print('It is true!')\n",
     "    print('Also print this')\n",
