--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -61,6 +61,8 @@
     }
    ],
    "source": [
+    "        if c:\n",
+    "            print('All three are true')\n",
     "else:\n",
     "    print('It is false!')\n",
     "print('Always print this')"
