--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -61,6 +61,8 @@
     }
    ],
    "source": [
+    "    if b:\n",
+    "        print('Both are true')\n",
     "        if c:\n",
     "            print('All three are true')\n",
     "else:\n",
