--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -61,6 +61,7 @@
     }
    ],
    "source": [
+    "a = True\n",
     "    print('It is true!')\n",
     "    print('Also print this')\n",
     "    if b:\n",
