--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -62,6 +62,8 @@
    ],
    "source": [
     "a = True\n",
+    "c = True\n",
+    "if a:\n",
     "    print('It is true!')\n",
     "    print('Also print this')\n",
     "    if b:\n",
