--- a/02_04_ControlFlow.ipynb
+++ b/02_04_ControlFlow.ipynb
@@ -62,6 +62,7 @@
    ],
    "source": [
     "a = True\n",
+    "b = False\n",
     "c = True\n",
     "if a:\n",
     "    print('It is true!')\n",
