--- a/02_02_Data_Structures.ipynb
+++ b/02_02_Data_Structures.ipynb
@@ -125,7 +125,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "type(my_set)"
+   ]
   },
   {
    "cell_type": "code",
